feat: Implement text processing operations and pipelines
- Added new text operations including Bag of Words.
- Created a TextOperationsFactory for managing operations.
- Introduced a text processing pipeline with operations for lowercase conversion and punctuation removal.
- Updated FastAPI routes to handle new operations and pipelines.

chore: Update requirements for scikit-learn

- Added scikit-learn to requirements.txt for text processing operations.

feat: Enhance frontend with job tracking features

- Created a new Jobs Tracking App with routing using React Router.
- Implemented components for job posting, searching, and navigation.
- Added basic styling for header, footer, and layout.
- Integrated Axios for API calls to the backend for job postings.

chore: Update docker-compose for job API and database

- Added services for jobs API and MongoDB in docker-compose.yml.
- Configured environment variables for MongoDB connection.

docs: Add README for Jobs Tracking App

- Provided an overview and limitations of the Jobs Tracking App.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,25 @@ services:
     container_name: text-api
     ports:
       - "8000:8000"
+  jobsapi:
+    build:
+      context: ./backend/Jobs
+      dockerfile: Jobs.Api/Dockerfile
+    container_name: jobs-api
+    ports:
+      - "8080:8080"
+      - "8081:8081"
+    environment:
+      - MongoDb__ConnectionString=mongodb://jobs-db:27017
+      - MongoDb__DatabaseName=Jobs
+      - MongoDb__CollectionName=job_postings
+    depends_on:
+      - jobsdb
+  jobsdb:
+    image: mongodb/mongodb-community-server:latest
+    container_name: jobs-db
+    ports:
+      - "27017:27017"
 networks:
   default:
     name: jobs-tracking-network
