--- a/frontend/jobs-app/package.json
+++ b/frontend/jobs-app/package.json
@@ -9,7 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.27.0"
+    "axios": "^1.11.0",
+    "preact": "^10.27.0",
+    "react-router-dom": "^7.8.1"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.10.2",
