WIP - llm generate

--- a/backend/text-api/.env
+++ b/backend/text-api/.env
@@ -1,2 +1,5 @@
 FILE_UPLOAD_DIR=/uploaded_files
 MAX_FILE_SIZE=10000000
+DEFAULT_LLM_PROVIDER=ollama
+DEFAULT_LLM_MODEL=llama3
+LLM_PROVIDER_URL=http://localhost:11434
